samples/_failures_safe/1761040226_dcf0fb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d3e3637c.c: In function ‘main’:
./samples/SAFE/__tmp_d3e3637c.c:164: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_d3e3637c.c:163:9: error: expected declaration or statement at end of input
  163 |         if
      |         ^~
./samples/SAFE/__tmp_d3e3637c.c:163:9: error: expected declaration or statement at end of input
